Changes buttons wrappers to fix right column littke mis align

--- a/style.css
+++ b/style.css
@@ -40,13 +40,16 @@ body{
     font-size: 48px;
     padding-bottom: 12px;
 }
-#btn-ac , #btn-equal{
+#btn-ac , #btn-zero{
+    flex-grow: 2;
 }
 #keys {
     width: 100%;
     height: 100%;
     max-height: 500px;
     justify-content: space-between;
+    padding: 0;
+    align-items: center;
 
 }
 
@@ -104,10 +107,7 @@ h1{
     width: 100%;
     height: 100%;
 }
-#keys {
-    padding: 0;
-    align-items: center;
-}
+
 .flex-col {
     display: flex;
     flex-direction: column;
